--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": [
+      "bun-types" // add Bun global
+    ]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
